syntax = "proto3"; 

package cloud.lianmi.im.order;
option go_package = "github.com/lianmi/servers/api/proto/order";


message RegisterPreKeysReq {
    //hex格式的OPK
    repeated string preKeys = 1;
}
